source/quantumCode/parser/TypeLangParser.py
# Generated from TypeLang.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class TypeLangParser ( Parser ):

    grammarFileName = "TypeLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-'", "'('", "'+'", "')'", "'*'", "'/'", 
                     "':'", "'case'", "'default'", "'bool'", "'unit'", "'num'", 
                     "'List<'", "','", "'Ref'", "'Str'", "'->'", "'define'", 
                     "'let'", "'lambda'", "'if'", "'switch'", "'car'", "'cdr'", 
                     "'cons'", "'list'", "'null?'", "'<'", "'='", "'>'", 
                     "'#t'", "'#f'", "'ref'", "'deref'", "'set'", "'free'", 
                     "'fork'", "'lock'", "'unlock'", "'process'", "'send'", 
                     "'stop'", "'self'", "'.'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'@'", "'...'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Define", "Let", "Lambda", 
                      "If", "Switch", "Car", "Cdr", "Cons", "List", "Null", 
                      "Less", "Equal", "Greater", "TrueLiteral", "FalseLiteral", 
                      "Ref", "Deref", "Assign", "Free", "Fork", "Lock", 
                      "UnLock", "Process", "Send", "Stop", "Self", "Dot", 
                      "Number", "Identifier", "Letter", "LetterOrDigit", 
                      "StrLiteral", "AT", "ELLIPSIS", "WS", "Comment", "Line_Comment" ]

    RULE_program = 0
    RULE_exp = 1
    RULE_numexp = 2
    RULE_addexp = 3
    RULE_subexp = 4
    RULE_multexp = 5
    RULE_divexp = 6
    RULE_varexp = 7
    RULE_letexp = 8
    RULE_definedecl = 9
    RULE_carexp = 10
    RULE_cdrexp = 11
    RULE_consexp = 12
    RULE_listexp = 13
    RULE_nullexp = 14
    RULE_strexp = 15
    RULE_boolexp = 16
    RULE_lambdaexp = 17
    RULE_callexp = 18
    RULE_ifexp = 19
    RULE_switchexp = 20
    RULE_lessexp = 21
    RULE_equalexp = 22
    RULE_greaterexp = 23
    RULE_refexp = 24
    RULE_derefexp = 25
    RULE_assignexp = 26
    RULE_freeexp = 27
    RULE_type = 28
    RULE_booleantype = 29
    RULE_unittype = 30
    RULE_numtype = 31
    RULE_listtype = 32
    RULE_pairtype = 33
    RULE_reft = 34
    RULE_stringt = 35
    RULE_funct = 36

    ruleNames =  [ "program", "exp", "numexp", "addexp", "subexp", "multexp", 
                   "divexp", "varexp", "letexp", "definedecl", "carexp", 
                   "cdrexp", "consexp", "listexp", "nullexp", "strexp", 
                   "boolexp", "lambdaexp", "callexp", "ifexp", "switchexp", 
                   "lessexp", "equalexp", "greaterexp", "refexp", "derefexp", 
                   "assignexp", "freeexp", "type", "booleantype", "unittype", 
                   "numtype", "listtype", "pairtype", "reft", "stringt", 
                   "funct" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    Define=18
    Let=19
    Lambda=20
    If=21
    Switch=22
    Car=23
    Cdr=24
    Cons=25
    List=26
    Null=27
    Less=28
    Equal=29
    Greater=30
    TrueLiteral=31
    FalseLiteral=32
    Ref=33
    Deref=34
    Assign=35
    Free=36
    Fork=37
    Lock=38
    UnLock=39
    Process=40
    Send=41
    Stop=42
    Self=43
    Dot=44
    Number=45
    Identifier=46
    Letter=47
    LetterOrDigit=48
    StrLiteral=49
    AT=50
    ELLIPSIS=51
    WS=52
    Comment=53
    Line_Comment=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ast = None
            self.defs = None
            self.expr = None
            self.def = None # DefinedeclContext
            self.e = None # ExpContext

        def definedecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeLangParser.DefinedeclContext)
            else:
                return self.getTypedRuleContext(TypeLangParser.DefinedeclContext,i)


        def exp(self):
            return self.getTypedRuleContext(TypeLangParser.ExpContext,0)


        def getRuleIndex(self):
            return TypeLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TypeLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
         localctx.defs =  new ArrayList<DefineDecl>() localctx.expr =  new UnitExp() 
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 74
                    localctx.def = self.definedecl()
                     localctx.defs.add(localctx.def.ast);  
                self.state = 81
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TypeLangParser.T__0) | (1 << TypeLangParser.T__1) | (1 << TypeLangParser.TrueLiteral) | (1 << TypeLangParser.FalseLiteral) | (1 << TypeLangParser.Number) | (1 << TypeLangParser.Identifier) | (1 << TypeLangParser.StrLiteral))) != 0):
                self.state = 82
                localctx.e = self.exp()
                 localctx.expr =  localctx.e.ast 


             localctx.ast =  new Program(localctx.defs, localctx.expr) 
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ast = None
            self.va = None # VarexpContext
            self.num = None # NumexpContext
            self.str = None # StrexpContext
            self.bl = None # BoolexpContext
            self.add = None # AddexpContext
            self.sub = None # SubexpContext
            self.mul = None # MultexpContext
            self.div = None # DivexpContext
            self.let = None # LetexpContext
            self.lam = None # LambdaexpContext
            self.call = None # CallexpContext
            self.i = None # IfexpContext
            self.sw = None # SwitchexpContext
            self.less = None # LessexpContext
            self.eq = None # EqualexpContext
            self.gt = None # GreaterexpContext
            self.car = None # CarexpContext
            self.cdr = None # CdrexpContext
            self.cons = None # ConsexpContext
            self.list = None # ListexpContext
            self.nl = None # NullexpContext
            self.ref = None # RefexpContext
            self.deref = None # DerefexpContext
            self.assign = None # AssignexpContext
            self.free = None # FreeexpContext

        def varexp(self):
            return self.getTypedRuleContext(TypeLangParser.VarexpContext,0)


        def numexp(self):
            return self.getTypedRuleContext(TypeLangParser.NumexpContext,0)


        def strexp(self):
            return self.getTypedRuleContext(TypeLangParser.StrexpContext,0)


        def boolexp(self):
            return self.getTypedRuleContext(TypeLangParser.BoolexpContext,0)


        def addexp(self):
            return self.getTypedRuleContext(TypeLangParser.AddexpContext,0)


        def subexp(self):
            return self.getTypedRuleContext(TypeLangParser.SubexpContext,0)


        def multexp(self):
            return self.getTypedRuleContext(TypeLangParser.MultexpContext,0)


        def divexp(self):
            return self.getTypedRuleContext(TypeLangParser.DivexpContext,0)


        def letexp(self):
            return self.getTypedRuleContext(TypeLangParser.LetexpContext,0)


        def lambdaexp(self):
            return self.getTypedRuleContext(TypeLangParser.LambdaexpContext,0)


        def callexp(self):
            return self.getTypedRuleContext(TypeLangParser.CallexpContext,0)


        def ifexp(self):
            return self.getTypedRuleContext(TypeLangParser.IfexpContext,0)


        def switchexp(self):
            return self.getTypedRuleContext(TypeLangParser.SwitchexpContext,0)


        def lessexp(self):
            return self.getTypedRuleContext(TypeLangParser.LessexpContext,0)


        def equalexp(self):
            return self.getTypedRuleContext(TypeLangParser.EqualexpContext,0)


        def greaterexp(self):
            return self.getTypedRuleContext(TypeLangParser.GreaterexpContext,0)


        def carexp(self):
            return self.getTypedRuleContext(TypeLangParser.CarexpContext,0)


        def cdrexp(self):
            return self.getTypedRuleContext(TypeLangParser.CdrexpContext,0)


        def consexp(self):
            return self.getTypedRuleContext(TypeLangParser.ConsexpContext,0)


        def listexp(self):
            return self.getTypedRuleContext(TypeLangParser.ListexpContext,0)


        def nullexp(self):
            return self.getTypedRuleContext(TypeLangParser.NullexpContext,0)


        def refexp(self):
            return self.getTypedRuleContext(TypeLangParser.RefexpContext,0)


        def derefexp(self):
            return self.getTypedRuleContext(TypeLangParser.DerefexpContext,0)


        def assignexp(self):
            return self.getTypedRuleContext(TypeLangParser.AssignexpContext,0)


        def freeexp(self):
            return self.getTypedRuleContext(TypeLangParser.FreeexpContext,0)


        def getRuleIndex(self):
            return TypeLangParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = TypeLangParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_exp)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                localctx.va = self.varexp()
                 localctx.ast =  localctx.va.ast 
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                localctx.num = self.numexp()
                 localctx.ast =  localctx.num.ast 
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                localctx.str = self.strexp()
                 localctx.ast =  localctx.str.ast 
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                localctx.bl = self.boolexp()
                 localctx.ast =  localctx.bl.ast 
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                localctx.add = self.addexp()
                 localctx.ast =  localctx.add.ast 
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 104
                localctx.sub = self.subexp()
                 localctx.ast =  localctx.sub.ast 
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 107
                localctx.mul = self.multexp()
                 localctx.ast =  localctx.mul.ast 
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 110
                localctx.div = self.divexp()
                 localctx.ast =  localctx.div.ast 
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 113
                localctx.let = self.letexp()
                 localctx.ast =  localctx.let.ast 
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 116
                localctx.lam = self.lambdaexp()
                 localctx.ast =  localctx.lam.ast 
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 119
                localctx.call = self.callexp()
                 localctx.ast =  localctx.call.ast 
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 122
                localctx.i = self.ifexp()
                 localctx.ast =  localctx.i.ast 
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 125
                localctx.sw = self.switchexp()
                 localctx.ast =  localctx.sw.ast 
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 128
                localctx.less = self.lessexp()
                 localctx.ast =  localctx.less.ast 
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 131
                localctx.eq = self.equalexp()
                 localctx.ast =  localctx.eq.ast 
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 134
                localctx.gt = self.greaterexp()
                 localctx.ast =  localctx.gt.ast 
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 137
                localctx.car = self.carexp()
                 localctx.ast =  localctx.car.ast 
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 140
                localctx.cdr = self.cdrexp()
                 localctx.ast =  localctx.cdr.ast 
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 143
                localctx.cons = self.consexp()
                 localctx.ast =  localctx.cons.ast 
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 146
                localctx.list = self.listexp()
                 localctx.ast =  localctx.list.ast 
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 149
                localctx.nl = self.nullexp()
                 localctx.ast =  localctx.nl.ast 
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 152
                localctx.ref = self.refexp()
                 localctx.ast =  localctx.ref.ast 
                pass

            elif la_ == 23:
                self.enterOuterAlt(localctx, 23)
                self.state = 155
                localctx.deref = self.derefexp()
                 localctx.ast =  localctx.deref.ast 
                pass

            elif la_ == 24:
                self.enterOuterAlt(localctx, 24)
                self.state = 158
                localctx.assign = self.assignexp()
                 localctx.ast =  localctx.assign.ast 
                pass

            elif la_ == 25:
                self.enterOuterAlt(localctx, 25)
                self.state = 161
                localctx.free = self.freeexp()
                 localctx.ast =  localctx.free.ast 
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ast = None
            self.n0 = None # Token
            self.n1 = None # Token

        def Number(self, i:int=None):
            if i is None:
                return self.getTokens(TypeLangParser.Number)
            else:
                return self.getToken(TypeLangParser.Number, i)

        def Dot(self):
            return self.getToken(TypeLangParser.Dot, 0)

        def getRuleIndex(self):
            return TypeLangParser.RULE_numexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumexp" ):
                listener.enterNumexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumexp" ):
                listener.exitNumexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumexp" ):
                return visitor.visitNumexp(self)
            else:
                return visitor.visitChildren(self)




    def numexp(self):

        localctx = TypeLangParser.NumexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_numexp)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                localctx.n0 = self.match(TypeLangParser.Number)
                 localctx.ast =  new NumExp(Integer.parseInt((None if localctx.n0 is None else localctx.n0.text))) 
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.match(TypeLangParser.T__0)
                self.state = 169
                localctx.n0 = self.match(TypeLangParser.Number)
                 localctx.ast =  new NumExp(-Integer.parseInt((None if localctx.n0 is None else localctx.n0.text))) 
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 171
                localctx.n0 = self.match(TypeLangParser.Number)
                self.state = 172
                self.match(TypeLangParser.Dot)
                self.state = 173
                localctx.n1 = self.match(TypeLangParser.Number)
                 localctx.ast =  new NumExp(Double.parseDouble((None if localctx.n0 is None else localctx.n0.text)+"."+(None if localctx.n1 is None else localctx.n1.text))) 
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.match(TypeLangParser.T__0)
                self.state = 176
                localctx.n0 = self.match(TypeLangParser.Number)
                self.state = 177
                self.match(TypeLangParser.Dot)
                self.state = 178
                localctx.n1 = self.match(TypeLangParser.Number)
                 localctx.ast =  new NumExp(Double.parseDouble("-" + (None if localctx.n0 is None else localctx.n0.text)+"."+(None if localctx.n1 is None else localctx.n1.text))) 
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AddexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ast = None
            self.list = None
            self.e = None # ExpContext

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeLangParser.ExpContext)
            else:
                return self.getTypedRuleContext(TypeLangParser.ExpContext,i)


        def getRuleIndex(self):
            return TypeLangParser.RULE_addexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddexp" ):
                listener.enterAddexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddexp" ):
                listener.exitAddexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddexp" ):
                return visitor.visitAddexp(self)
            else:
                return visitor.visitChildren(self)




    def addexp(self):

        localctx = TypeLangParser.AddexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_addexp)
         localctx.list =  new ArrayList<Exp>() 
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(TypeLangParser.T__1)
            self.state = 183
            self.match(TypeLangParser.T__2)
            self.state = 184
            localctx.e = self.exp()
             localctx.list.add(localctx.e.ast); 
            self.state = 189 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 186
                localctx.e = self.exp()
                 localctx.list.add(localctx.e.ast); 
                self.state = 191 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TypeLangParser.T__0) | (1 << TypeLangParser.T__1) | (1 << TypeLangParser.TrueLiteral) | (1 << TypeLangParser.FalseLiteral) | (1 << TypeLangParser.Number) | (1 << TypeLangParser.Identifier) | (1 << TypeLangParser.StrLiteral))) != 0)):
                    break

            self.state = 193
            self.match(TypeLangParser.T__3)
             localctx.ast =  new AddExp(localctx.list) 
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubexpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ast = None
            self.list = None
            self.e = None # ExpContext

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypeLangParser.ExpContext)
            else:
                return self.getTypedRuleContext(TypeLangParser.ExpContext,i)


        def getRuleIndex(self):
            return TypeLangParser.RULE_subexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubexp" ):
                listener.enterSubexp(self)
